# advent_of_code

./: .gitignore  README  README.md
2017/: AdventDay1.java  AdventDay10.java  AdventDay11.java  AdventDay12.java  AdventDay13.java  AdventDay14.java  AdventDay15.java  AdventDay15Generator.java  AdventDay16.py  AdventDay2.java  AdventDay3.java  AdventDay4.java  AdventDay5.java  AdventDay6.java  AdventDay7.java  AdventDay7Node.java  AdventDay8.java  AdventDay8Register.java  AdventDay9.java  Coord.java  FileReader.java  Test.py
2018/: Advent1.py  Advent2.py  Advent3.py  Advent4.py
2019/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  intcode_computer.py  intcode_computer_obsolete.py  reset.py  runall
2020/: README  day7.py
2021/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  main.cpp  murder.py
2021/python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  (+16 more)
2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  getinput.sh  sand_visualizer.py
2023/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  21.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  getinput.sh  readInput.py
2023/hask/: 1.hs  2.hs  2MegaparsecAttempt.hs  6.hs  advent.cabal
2024/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  coord.py  getinput.sh  readInput.py
(+1 files in other folders)
