cabal-version:      2.4
name:               hask
version:            0.1.0.0

library
    build-depends:    base ^>=4.17.2.0
    default-language: Haskell2010

executable day01
    main-is:          1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0

    default-language: Haskell2010

executable day02
    main-is:          2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        containers

    default-language: Haskell2010
